--- a/posts/hack2025-01-go.md
+++ b/posts/hack2025-01-go.md
@@ -106,6 +106,8 @@ Okay, easy enough. What about different numbers of handicap stones? Using standa
 
 Now let's make things more spicy. I keep winning every 1-stone game, but losing every 2-stone game. I want a 1.5 stone handicap. Well we can't add fractional stones, but we can look for something worth between 6.5 and 20 points.
 
+Or, let's find something worth 0.0 points. I want a board position we can start with and not need that dumb komi rule.
+
 Let's do the full analysis. Every possible starting board positions. Then we'll look for one that KataGo says is worth around... say, 12 points.
 
 Of course, we can't really analyze every board position, so I just did ones with up to 2 stones. I included ones with white stones, because why not?
